--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="index.html"
+        <a class="logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
         <ul>
@@ -48,9 +48,9 @@
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section-one">
+        <h1 class="text-section-one">Effective Solutions for Your Business</h1>
+        <button class="button-order" type="button">Order Service</button>
       </section>
       <section>
         <h2>Features</h2>
