--- a/index.html
+++ b/index.html
@@ -52,33 +52,34 @@
         <h1 class="text-section-one">Effective Solutions for Your Business</h1>
         <button class="button-order" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Features</h2>
+
+      <section class="section-two">
+        <h2 class="section-two-features">Features</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section-two-strategy">Strategy</h3>
+            <p class="section-two-onep">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-two-punctuality">Punctuality</h3>
+            <p class="section-two-twop">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-two-diligence">Diligence</h3>
+            <p class="section-two-threep">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section-two-technologies">Technologies</h3>
+            <p class="section-two-fourp">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
