--- a/index.html
+++ b/index.html
@@ -57,43 +57,44 @@
         <h2 class="section-two-features">Features</h2>
         <ul>
           <li>
-            <h3 class="section-two-strategy">Strategy</h3>
-            <p class="section-two-onep">
+            <h3 class="section-two-small">Strategy</h3>
+            <p class="section-two-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="section-two-punctuality">Punctuality</h3>
-            <p class="section-two-twop">
+            <h3 class="section-two-small">Punctuality</h3>
+            <p class="section-two-p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="section-two-diligence">Diligence</h3>
-            <p class="section-two-threep">
+            <h3 class="section-two-small"Diligence</h3>
+            <p class="section-two-p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="section-two-technologies">Technologies</h3>
-            <p class="section-two-fourp">
+            <h3 class="section-two-small">Technologies</h3>
+            <p class="section-two-p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
 
-        <ul>
+      <section class="section-three">
+        <h2 class="section-three-title">Our Team</h2>
+
+        <ul class="list-name-profession">
           <li>
             <img src="./images/img1.jpg" alt="Mark" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-three-name">Mark Guerrero</h3>
+            <p class="section-three-profession">Product Designer</p>
           </li>
 
           <li>
@@ -103,8 +104,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-three-name">Tom Ford</h3>
+            <p class="section-three-profession">Frontend Developer</p>
           </li>
 
           <li>
@@ -114,8 +115,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-three-name">Camila Garcia</h3>
+            <p class="section-three-profession">Marketing</p>
           </li>
 
           <li>
@@ -125,8 +126,8 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-three-name">Daniel Wilson</h3>
+            <p class="section-three-profession">UI Designer</p>
           </li>
         </ul>
       </section>
