--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
       <section class="section-two">
         <h2 class="section-two-features">Features</h2>
         <ul>
-          <li class="section-two-all">
+          <li>
             <h3 class="section-two-small">Strategy</h3>
             <p class="section-two-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="section-two-all">
+          <li>
             <h3 class="section-two-small">Punctuality</h3>
             <p class="section-two-p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="section-two-all">
+          <li>
             <h3 class="section-two-small">Diligence</h3>
             <p class="section-two-p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="section-two-all">
+          <li>
             <h3 class="section-two-small">Technologies</h3>
             <p class="section-two-p">
               Design practice focused on digital experiences. We bring forth a
@@ -91,13 +91,13 @@
         <h2 class="section-three-title">Our Team</h2>
 
         <ul class="list-name-profession">
-          <li>
+          <li class="section-three-all">
             <img src="./images/img1.jpg" alt="Mark" width="264" height="260" />
             <h3 class="section-three-name">Mark Guerrero</h3>
             <p class="section-three-profession">Product Designer</p>
           </li>
 
-          <li>
+          <li class="section-three-all">
             <img
               src="./images/img2.jpg"
               alt="Tom Ford"
@@ -108,7 +108,7 @@
             <p class="section-three-profession">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="section-three-all">
             <img
               src="./images/img3.jpg"
               alt="Camila Garcia"
@@ -119,7 +119,7 @@
             <p class="section-three-profession">Marketing</p>
           </li>
 
-          <li>
+          <li class="section-three-all">
             <img
               src="./images/img4.jpg"
               alt="Daniel Wilson"
