--- a/index.html
+++ b/index.html
@@ -131,8 +131,73 @@
           </li>
         </ul>
       </section>
-    </main>
 
+      <section class="section-four">
+        <h1 class="text-section-four">Our Portfolio</h1>
+        <ul class="tools">
+          <li class="section-four-all">
+            <img
+              src="./images/img1a.jpg"
+              alt="Banking App"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-four-toolname">Banking App</h3>
+            <p class="section-four-tooldis">App</p>
+          </li>
+          <li class="section-four-all">
+            <img
+              src="./images/img2a.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-four-toolname">Cashless Payment</h3>
+            <p class="section-four-tooldis">Marketing</p>
+          </li>
+          <li class="section-four-all">
+            <img
+              src="./images/img3a.jpg"
+              alt="Meditation App"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-four-toolname">Meditation App</h3>
+            <p class="section-four-tooldis">App</p>
+          </li>
+          <li class="section-four-all">
+            <img
+              src="./images/img4a.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-four-toolname">Taxi Service</h3>
+            <p class="section-four-tooldis">Marketing</p>
+          </li>
+          <li class="section-four-all">
+            <img
+              src="./images/img5a.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-four-toolname">Screen Illustrations</h3>
+            <p class="section-four-tooldis">Design</p>
+          </li>
+          <li class="section-four-all">
+            <img
+              src="./images/img6a.jpg"
+              alt="Online Courses"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-four-toolname">Online Courses</h3>
+            <p class="section-four-tooldis">Marketing</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
