section four updated

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
       </section>
 
       <section class="section-four">
-        <h1 class="text-section-four">Our Portfolio</h1>
+        <h1 class="section-four-title">Our Portfolio</h1>
+
         <ul class="tools">
           <li class="section-four-all">
             <img
