--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </main>
     <footer class="footer">
       <a class="footer-title" href="./index.html"
-        >Web<span class="Studio">Studio</span></a
+        >Web<span class="footer-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
